<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="leeme.tta.intel.ehu.eus.leeme.presentacion.TestActivity"
    tools:showIn="@layout/activity_test"
    android:orientation="vertical"
    android:id="@+id/test_linearlayout"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/test_linearlayout_escoger"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_text_escoge"
            android:id="@+id/test_textview_seleccion" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/test_radiogroup_gurpo">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_text_vocabulario"
                android:id="@+id/test_radiobutton_palabras" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_text_frases"
                android:id="@+id/test_radiobutton_frases" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_text_boton"
            android:id="@+id/test_button_eleccion"
            android:layout_gravity="center_horizontal"
            android:onClick="seleccionarTipo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/test_linearlayout_test"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/test_textview_numtest"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:textSize="20dp" />

        <VideoView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/test_videoview_video"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/test_edittext_respuesta"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_text_botoncorregir"
            android:id="@+id/test_button_corregir"
            android:layout_gravity="center_horizontal"
            android:onClick="corregirTest"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/test_imageview_respuesta"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/test_textview_respcorrecta"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_text_botonsiguiente"
            android:id="@+id/test_button_siguiente"
            android:layout_gravity="center_horizontal"
            android:onClick="siguienteTest"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingLeft="100dp">

            <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/test_imageview_correctas"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/test_textview_correctas"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/test_imageview_incorrectas"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/test_textview_incorrectas"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
