<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="leeme.tta.intel.ehu.eus.leeme.presentacion.MenuActivity"
    tools:showIn="@layout/activity_menu">


    <ImageButton
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:id="@+id/menu_imagebutton_casa"

        android:layout_alignTop="@+id/menu_imagebutton_parque"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showCasa"
        tools:targetApi="16"/>

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:id="@+id/menu_imagebutton_parque"

        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:onClick="showMenu2"/>

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:id="@+id/menu_imagebutton_colegio"

        android:layout_below="@+id/menu_imagebutton_casa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:onClick="showEscuela"/>


    <ImageButton
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:id="@+id/menu_imagebutton_chuches"

        android:layout_alignTop="@+id/menu_imagebutton_colegio"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="showMenu2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_text_casa"
        android:id="@+id/menu_textView_casa"
        android:layout_alignBottom="@+id/menu_imagebutton_casa"
        android:layout_alignRight="@+id/menu_imagebutton_casa"
        android:layout_alignEnd="@+id/menu_imagebutton_casa"
        android:layout_marginBottom="-15dp"
        android:layout_marginRight="42dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_text_parque"
        android:id="@+id/menu_textView_parque"
        android:layout_alignTop="@+id/menu_textView_casa"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_text_colegio"
        android:id="@+id/menu_textView_colegio"
        android:layout_marginBottom="-15dp"
        android:layout_alignBottom="@+id/menu_imagebutton_colegio"
        android:layout_alignLeft="@+id/menu_imagebutton_colegio"
        android:layout_marginLeft="32dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/menu_text_chuches"
        android:id="@+id/menu_textView_chuches"
        android:layout_alignBottom="@+id/menu_imagebutton_colegio"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-15dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>

</RelativeLayout>
