<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="leeme.tta.intel.ehu.eus.leeme.presentacion.Menu2Activity"
    tools:showIn="@layout/activity_menu2">

    <ImageButton
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:id="@+id/menu2_imagebutton_vocabulario"
        tools:targetApi="16"
        android:layout_above="@+id/menu2_imagebutton_oraciones"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="goVocabulario"/>

    <ImageButton
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:id="@+id/menu2_imagebutton_oraciones"

        android:layout_above="@+id/menu2_imagebutton_ejercicios"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="goOraciones"/>

    <ImageButton
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:id="@+id/menu2_imagebutton_ejercicios"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:onClick="goEjercicios"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu2_text_vocabulario"
        android:id="@+id/menu2_textView_vocabulario"
        android:layout_alignBottom="@+id/menu2_imagebutton_vocabulario"
        android:layout_alignRight="@+id/menu2_imagebutton_vocabulario"
        android:layout_alignEnd="@+id/menu2_imagebutton_vocabulario"
        android:layout_marginBottom="-15dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu2_text_oraciones"
        android:id="@+id/menu2_textView_oraciones"
        android:layout_alignBottom="@+id/menu2_imagebutton_oraciones"
        android:layout_alignRight="@+id/menu2_imagebutton_oraciones"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu2_text_ejercicios"
        android:id="@+id/menu2_textView_ejercicios"
        android:layout_marginBottom="-15dp"
        android:layout_alignBottom="@+id/menu2_imagebutton_ejercicios"
        android:layout_alignLeft="@+id/menu2_imagebutton_ejercicios"
        android:layout_marginLeft="28dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>

</RelativeLayout>
