<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="leeme.tta.intel.ehu.eus.leeme.presentacion.MenuActivity"
    tools:showIn="@layout/activity_menuescuela">


    <ImageButton
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:id="@+id/menu_imagebutton_clase"
        android:layout_alignTop="@+id/menu_imagebutton_biblioteca"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showMenu2"/>

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:id="@+id/menu_imagebutton_biblioteca"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:onClick="showMenu2"/>

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:id="@+id/menu_imagebutton_gimnasio"
        android:layout_marginTop="47dp"
        android:onClick="showMenu2"
        android:layout_below="@+id/menu_imagebutton_clase"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_text_clase"
        android:id="@+id/menu_textView_clase"
        android:layout_alignBottom="@+id/menu_imagebutton_clase"
        android:layout_alignRight="@+id/menu_imagebutton_clase"
        android:layout_alignEnd="@+id/menu_imagebutton_clase"
        android:layout_marginBottom="-15dp"
        android:layout_marginRight="42dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_text_biblioteca"
        android:id="@+id/menu_textView_biblioteca"
        android:layout_alignTop="@+id/menu_textView_clase"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="12dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_text_gimnasio"
        android:id="@+id/menu_textView_gimnasio"
        android:layout_marginBottom="-15dp"
        android:layout_alignBottom="@+id/menu_imagebutton_gimnasio"
        android:layout_alignLeft="@+id/menu_imagebutton_gimnasio"
        android:layout_marginLeft="22dp"
        android:background="@drawable/rounded_corner"
        android:textColor="#FFFFFF"/>




</RelativeLayout>